Add button to change grid size Add functions to change grid size

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button class="button">Change Size!</button>
     <div class="container" style="height:960px; width: 960px;height: 960px; display: flex; box-sizing: border-box; padding: 0px; flex: 1; flex-wrap: wrap;"></div>
 
 </body>
